--- a/aboutPage.html
+++ b/aboutPage.html
@@ -642,34 +642,29 @@
                         </div>
                         <div class="shopInfo">
                             <h2>Tokyo</h2>
-                            <div class="shopInfo__text">
-                                <p>
-                                    〒153-0053<br />
-                                    東京都目黒区五本木2-15-1<br />
-                                    アンドウビル 1F
-                                </p>
-                                <p>OPEN: 13:00-20:00</p>
+                            <div class="shopInfo__detail">
+                                <div class="shopInfo__detail__text">
+                                    <p>
+                                        〒153-0053<br />
+                                        東京都目黒区五本木2-15-1<br />
+                                        アンドウビル 1F
+                                    </p>
+                                    <p>OPEN: 13:00-20:00</p>
 
-                                <p class="small">
-                                    ※最新の営業情報は<br />Instagramをご確認ください
-                                </p>
-                            </div>
-                            <div class="shopInfo__sns">
-                                <a
-                                    href="https://www.instagram.com/recollection_tokyo/"
-                                >
-                                    <img
-                                        src="img/logo/icons8-instagram-50.png"
-                                        alt="Tokyo Instagram"
-                                    />
-                                </a>
-
-                                <!-- <a href="">
-                                    <img
-                                        src="img/logo/icons8-threads-50.png"
-                                        alt=""
-                                    />
-                                </a> -->
+                                    <p class="small">
+                                        ※最新の営業情報は<br />Instagramをご確認ください
+                                    </p>
+                                </div>
+                                <div class="shopInfo__detail__sns">
+                                    <a
+                                        href="https://www.instagram.com/recollection_tokyo/"
+                                    >
+                                        <img
+                                            src="img/logo/icons8-instagram-50.png"
+                                            alt="Tokyo Instagram"
+                                        />
+                                    </a>
+                                </div>
                             </div>
                             <div class="shopInfo__location">
                                 <iframe
@@ -684,33 +679,35 @@
                     <li>
                         <div class="shopInfo">
                             <h2>Kumamoto</h2>
-                            <div class="shopInfo__text">
-                                <p>
-                                    〒860-0845<br />
-                                    熊本県熊本市中央区上通町<br />
-                                    みどりビル 2F
-                                </p>
-                                <p>OPEN: 13:00-20:00</p>
-                                <p>定休日: 水曜日,木曜日</p>
-                            </div>
-                            <div class="shopInfo__sns">
-                                <a
-                                    href="https://www.instagram.com/recollection__vintage/"
-                                >
-                                    <img
-                                        src="img/logo/icons8-instagram-50.png"
-                                        alt="Kumamoto Instagram"
-                                    />
-                                </a>
+                            <div class="shopInfo__detail">
+                                <div class="shopInfo__detail__text">
+                                    <p>
+                                        〒860-0845<br />
+                                        熊本県熊本市中央区上通町<br />
+                                        みどりビル 2F
+                                    </p>
+                                    <p>OPEN: 13:00-20:00</p>
+                                    <p>定休日: 水曜日,木曜日</p>
+                                </div>
+                                <div class="shopInfo__detail__sns">
+                                    <a
+                                        href="https://www.instagram.com/recollection__vintage/"
+                                    >
+                                        <img
+                                            src="img/logo/icons8-instagram-50.png"
+                                            alt="Kumamoto Instagram"
+                                        />
+                                    </a>
 
-                                <a
-                                    href="https://www.threads.net/@recollection__vintage"
-                                >
-                                    <img
-                                        src="img/logo/icons8-threads-50.png"
-                                        alt="Kumamoto Threads"
-                                    />
-                                </a>
+                                    <a
+                                        href="https://www.threads.net/@recollection__vintage"
+                                    >
+                                        <img
+                                            src="img/logo/icons8-threads-50.png"
+                                            alt="Kumamoto Threads"
+                                        />
+                                    </a>
+                                </div>
                             </div>
                             <div class="shopInfo__location">
                                 <iframe
